<resources>
    <string name="app_name">SenseNote</string>
    <string name="question_1">叔叔帅不帅</string>
    <string name="question_1_answer">答案显示在此处</string>
    <string name="show_answer">显示答案</string>
    <string name="forget_password"><b>忘记密码？</b></string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="network_unavailable_string">网络不可用,请稍后再试</string>
    <string name="register_success">注册成功</string>
    <string name="all_note">全部笔记本(0)</string>
    <string name="notebook">笔记本</string>
    <string name="note_title">标题</string>
    <string name="note_add_img">插入图片</string>
    <string name="undefined_title">未命名标题</string>
    <string name="recent_search">最近搜索</string>
    <string name="search_notebook_detail_hint">请输入内容对笔记进行检索</string>
</resources>
