<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/question_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        />
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/question_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_1_answer"/>
    <Button
        android:background="@drawable/change_color_btn"
        android:id="@+id/ask_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_answer"/>

</LinearLayout>